add click me button

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <H1>My Page - Leo Cook</H1>
     <H2>Some Content About Myself</H2>
     <p>I have a keen interest website design, user experience and data science</p>
+    <button>click me!</button>
 </body>
 </html>
